Remove unused variable (fix warning).  b=171830